# forex-signal-app

./: .env.example  .gitignore  dashboard.py  headlines.json  latest.json  pair_headlines.json  pyproject.toml  requirements.lock.txt  requirements.txt  run_cron.sh  runs.json  signals.db
.github/workflows/: pipeline.yml
data/: headlines.json  latest.json  pair_headlines.json  runs.json
hf_space/: README.md  app.py  requirements.txt
src/: export.py
src/forex_signal/: __init__.py  alerter.py  backtest.py  cli.py  config.py  detector.py  fetcher.py  models.py  signals.py  storage.py
src/forex_signal/sentiment/: __init__.py  base.py  finbert.py  vader.py
